# scope

./: .gitignore  Anchor.toml  Cargo.toml  DEPLOY.md  Makefile  README.md  TODO.md  deploy.sh  ixns.in  package.json  rust-toolchain.toml
.github/docker/: helm.Dockerfile
.github/workflows/: bot-scope-docker-build.yml  prettier.yml  rust.yml  ts-integration.yaml
configs/devnet/: hubble.json
configs/mainnet/: hubble.json  ixs.txt  jlp-mint-to-scope.json
crank/common/src/client/: rpc.rs
crank/crank/: Cargo.toml  issue.md
crank/crank/src/: main.rs
docs/: release_0.10.0.md  release_0.10.1.md  release_0.10.2.md  release_0.10.3.md  release_0.11.1.md  release_0.12.0.md  release_0.13.0.md  release_0.13.2.md  release_0.5.0.md  release_0.6.0.md  release_0.7.0.md  release_0.8.0.md  release_0.8.1.md  release_0.8.2.md  release_0.9.0.md  release_0.9.1.md  update_admin.md
off_chain/crank/: Cargo.toml
off_chain/crank/src/: main.rs  scope_client.rs
off_chain/docker-bot/: Dockerfile  docker-entrypoint.sh
off_chain/docker-bot/helm/: Chart.yaml  values.yaml
off_chain/orbit-link/: Cargo.toml  Readme.md
off_chain/orbit-link/src/: errors.rs  fees.rs  lib.rs  tx_builder.rs
off_chain/orbit-link/src/async_client/: banks_client.rs  mod.rs  rpc_client.rs
off_chain/scope-cli/: Cargo.toml  README.md
off_chain/scope-cli/src/: lib.rs  main.rs  scope_client.rs  utils.rs
off_chain/scope-cli/src/config/: mapping.rs  mint_to_scope_chain.rs  mod.rs  scope_config.rs  token_config.rs  token_list.rs  utils.rs
off_chain/scope-cli/src/oracle_helpers/: jupiter_lp.rs  jupiter_lp_compute.rs  jupiter_lp_cpi.rs  jupiter_lp_fetch.rs  jupiter_lp_scope.rs  ktokens.rs  meteora_dlmm.rs  mod.rs  orca_whirlpool.rs  single_account_oracle.rs  twap.rs  yi_token.rs
programs/jup-perp-itf/src/: lib.rs  states.rs
programs/mock_oracles/: Cargo.toml
programs/mock_oracles/src/: ctokens.rs  lib.rs  msol_stake.rs  pc.rs  spl_stake.rs
programs/oracle/: Cargo.toml
programs/oracle/src/: lib.rs  pyth_utils.rs
programs/oracle/src/handlers/: handler_initialize.rs  handler_refresh_prices.rs  handler_update_mapping.rs
programs/oracle/src/utils/: pyth.rs
programs/pyth/: build.rs
programs/pyth/src/: lib.rs
programs/scope/: Cargo.toml  build.rs
programs/scope-types/: Cargo.toml
programs/scope/proptest-regressions/oracles/: twap.txt
programs/scope/proptest-regressions/oracles/ktokens/: kamino.txt
programs/scope/src/: errors.rs  lib.rs  program_id.rs  states.rs
programs/scope/src/handlers/: handler_approve_admin_cached.rs  handler_close_mint_map.rs  handler_create_mint_map.rs  handler_initialize.rs  handler_initialize_oracle_twaps.rs  handler_initialize_tokens_metadata.rs  handler_refresh_prices.rs  handler_reset_twap.rs  handler_set_admin_cached.rs  handler_update_mapping.rs  handler_update_mapping_twap.rs  handler_update_token_metadata.rs  handler_yitoken_prices.rs  mod.rs
programs/scope/src/oracles/: ctokens.rs  jupiter_lp.rs  ktokens.rs  ktokens_token_x.rs  meteora_dlmm.rs  mod.rs  msol_stake.rs  pyth.rs  pyth_ema.rs  spl_stake.rs  switchboard_v1.rs  switchboard_v2.rs  twap.rs
programs/scope/src/oracles/ktokens/: kamino.rs  mod.rs  raydium_state.rs
programs/scope/src/oracles/ktokens/clmm/: mod.rs  orca_clmm.rs  raydium_clmm.rs
programs/scope/src/utils/: ctokens.rs  macros.rs  math.rs  mod.rs  pdas.rs  price_impl.rs  pyth.rs  scope_chain.rs  spl_stake.rs  switchboard_v1.rs  switchboard_v2.rs  yitoken.rs
programs/scope/src/utils/ctokens/: last_update.rs  mod.rs  reserve.rs
programs/scope/src/utils/ctokens/math/: common.rs  decimal.rs  rate.rs
programs/scope/tests/: tests_security_init.rs  tests_security_mint_to_chain.rs  tests_security_refresh_list.rs  tests_security_refresh_one.rs  tests_security_reset_twap.rs  tests_security_set_and_approve_admin.rs  tests_security_update_mapping.rs  tests_twap.rs
programs/scope/tests/common/: client.rs  fixtures.rs  mod.rs  operations.rs  runner.rs  setup.rs  types.rs  utils.rs
programs/scope/tests/common/mock_oracles/: clmms.rs  jupiter_lp.rs  ktoken.rs  mod.rs  pyth.rs  spl_stake.rs
programs/scope/types/: Cargo.toml
programs/scope/types/src/: lib.rs
programs/switchbord-itf/: Cargo.toml
programs/switchbord-itf/src/: accounts.rs
programs/test_cpi_caller/: Cargo.toml
test_deps/: pyth_account_1.json  pyth_account_2.json
tests/: bot_utils.ts  global.ts  oracle.ts  pythUtils.ts  pyth_utils.ts  test_crank.ts  test_mapping.json  test_mapping_updated.json  test_oracle_operation.ts  test_switchboard.ts  test_twap.ts  test_upload.ts  test_yi_token.ts  utils.ts
tests/oracle_utils/: ctokens.ts  mock_oracles.ts  msol_stake.ts  pyth.ts  switchboard_v1.ts  switchboard_v2.ts  yitokens.ts
