[package]
name = "orbit-link"
version = "0.1.0"
edition = "2021"
authors = ["Olivier Eblé <olivier@eble.fr>"]
description = "OrbitLink is convenience layer over Solana's async client for Anchor programs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rpc-client"]
rpc-client = ["solana-client"]
banks-client = ["solana-banks-client", "solana-banks-interface"]

[dependencies]
anchor-client = "0.28.0"
solana-transaction-status = "~1.16.18"
solana-client = {version = "~1.16.18", optional = true}
solana-banks-client = {version = "~1.16.18", optional = true}
solana-banks-interface = {version = "1.16.18", optional = true}
solana-address-lookup-table-program = "1.14.5"
base64 = "0.21.0"
bs58 = "0.4.0"
thiserror = "1.0"
async-trait = "0.1.61"
futures = "0.3.25"
tokio = "1.14.1"
