[package]
name = "orbit-link"
version = "0.1.0"
edition = "2021"
authors = ["Olivier Eblé <olivier@eble.fr>"]
description = "OrbitLink is convenience layer over Solana's async client for Anchor programs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rpc-client"]
rpc-client = ["solana-client"]
banks-client = ["solana-banks-client", "solana-banks-interface"]

[dependencies]
anchor-client.workspace = true
solana-transaction-status.workspace = true
solana-client = { workspace = true, optional = true }
solana-banks-client = { workspace = true, optional = true }
solana-banks-interface = { workspace = true, optional = true }
base64 = "0.21.0"
bs58 = "0.5.0"
thiserror.workspace = true
async-trait = "0.1.61"
futures = "0.3.25"
tokio = "1.14.1"
