[package]
name = "oracle"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "oracle"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-spl = "0.21.0"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
anchor-lang = "0.21.0"
num_enum = "0.5.6"
pyth-client = "0.2.2"