[package]
name = "scope"
version = "0.1.0"
description = "Scope is Hubble's oracle aggregator"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "scope"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
skip_price_validation = []
devnet = ["skip_price_validation"]
localnet = []

[dependencies]
anchor-lang = "0.20.1"
num_enum = "0.5.6"
pyth-client = "0.2.2"
cfg-if = "1.0.0"
