[package]
name = "scope"
version = "0.1.0"
description = "Scope is Hubble's oracle aggregator"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "scope"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
skip_price_validation = []
test-bpf = []
debug = []

# If none of the following is set, one will be selected based on env $CLUSTER variable
# If $CLUSTER is not set either, default will be mainnet
default = ["yvaults"]
yvaults = ["dep:yvaults"]
devnet = ["skip_price_validation"]
localnet = []
mainnet = []

[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
solana-program.workspace = true
bytemuck.workspace = true
num_enum.workspace = true
cfg-if.workspace = true
serde.workspace = true
strum.workspace = true
pyth-sdk-solana = "0.4.2"
switchboard-program = "0.2.0"
arrayref = "0.3.6"
decimal-wad = "0.1.7"
rust_decimal = "1.18.0"
# Comment out the line below if you do not have access to the yvaults repo
yvaults = { git = "ssh://git@github.com/hubbleprotocol/yvaults.git", features = [
    "no-entrypoint",
    "cpi",
    "mainnet",
], optional = true }
# Uncomment the line below if you do not have access to the yvaults repo
#yvaults = { path = "../yvaults_stub", package = "yvaults_stub", optional = true }
sha2 = "0.10.0"
whirlpool = { git = "https://github.com/hubbleprotocol/whirlpools", branch = "anchor/0.28.0", features = [
    "no-entrypoint",
    "cpi",
] }
raydium-amm-v3 = { git = "https://github.com/raydium-io/raydium-clmm", features = [
    "no-entrypoint",
    "cpi",
] }

[dev-dependencies]
async-recursion = "1.0.5"
proptest = "1.0"
solana-logger.workspace = true
solana-program-test.workspace = true
solana-sdk.workspace = true
thiserror.workspace = true
test_cpi_caller = { path = "../test_cpi_caller" }
test-case = "3.2.1"
