[package]
name = "scope-types"
version = "1.0.0"
description = "Types for Scope"
repository = "https://github.com/hubbleprotocol/scope"
authors = ["Scope Maintainers <dev@hubbleprotocol.io>"]
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[features]
# If none of the following is set, one will be selected based on env $CLUSTER variable
# If $CLUSTER is not set either, default will be mainnet
devnet = []
localnet = []
mainnet = []

[dependencies]
anchor-lang.workspace = true
solana-program.workspace = true
num_enum.workspace = true
cfg-if.workspace = true
bytemuck.workspace = true
